crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__assert_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/assert.py
---
## Input

```py
assert (
    # Some comment
    True  # Some comment
    # Some comment
), "Some string"  # Some comment
# Some comment
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,6 +1,8 @@
 assert (
     # Some comment
     True  # Some comment
+), (
     # Some comment
-), "Some string"  # Some comment
+    "NOT_YET_IMPLEMENTED_STRING"
+)  # Some comment
 # Some comment
```

## Ruff Output

```py
assert (
    # Some comment
    True  # Some comment
    # Some comment
), "Some string"  # Some comment
# Some comment
```

## Black Output

```py
assert (
    # Some comment
    True  # Some comment
    # Some comment
), "Some string"  # Some comment
# Some comment
```


