crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__bracketmatch_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/bracketmatch.py
---
## Input


```py
for ((x in {}) or {})['a'] in x:
    pass
pem_spam = lambda l, spam = {
    "x": 3
}: not spam.get(l.strip())
lambda x=lambda y={1: 3}: y['x':lambda y: {1: 2}]: x

```


## Black Differences


```diff
--- Black
+++ Ruff
@@ -1,5 +1,4 @@
-for ((x in {}) or {})["a"] in x:
+for ((x in {}) or {})['a'] in x:
     pass
 pem_spam = lambda l, spam={"x": 3}: not spam.get(l.strip())
-lambda x=lambda y={1: 3}: y["x" : lambda y: {1: 2}]: x
-
+lambda x=lambda y={1: 3}: y['x' : lambda y: {1: 2}]: x
\ No newline at end of file

```


## Ruff Output


```py
for ((x in {}) or {})['a'] in x:
    pass
pem_spam = lambda l, spam={"x": 3}: not spam.get(l.strip())
lambda x=lambda y={1: 3}: y['x' : lambda y: {1: 2}]: x
```


## Black Output


```py
for ((x in {}) or {})["a"] in x:
    pass
pem_spam = lambda l, spam={"x": 3}: not spam.get(l.strip())
lambda x=lambda y={1: 3}: y["x" : lambda y: {1: 2}]: x


```



