crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__comment_after_escaped_newline_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/comment_after_escaped_newline.py
---
## Input

```py
def bob(): \
         # pylint: disable=W9016
    pass


def bobtwo(): \
    \
  # some comment here
    pass

```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,7 +1,8 @@
-def bob():  # pylint: disable=W9016
+def bob():
+    # pylint: disable=W9016
     pass
 
 
-def bobtwo():  # some comment here
+def bobtwo():
+    # some comment here
     pass
-

```

## Ruff Output

```py
def bob():
    # pylint: disable=W9016
    pass


def bobtwo():
    # some comment here
    pass

```

## Black Output

```py
def bob():  # pylint: disable=W9016
    pass


def bobtwo():  # some comment here
    pass


```


